--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 </head>
 <body>
 
-  <header class="book-ends max-length gutter pad-t-1-2 pad-b-1-2">
+  <header class="book-ends max-length gutter pad-t-1-2 pad-b-1-2" role="banner">
     <strong class="book-title giga not-bold">Twenty Thousand Leagues Under the Sea</strong>
     <p class="book-author push-0"><span class="book-author-by micro italic">by</span> <span class="mega">Jules Verne</span></p>
   </header>
 
-  <article class="max-length">
+  <article class="max-length" role="main">
     <header class="chapter-ends chapter-name pad-t-1-2 pad-b-1-2 gutter push relative">
       <hgroup class="chapter-details">
         <h1 class="chapter-number not-bold push-0 italic kilo">Chapter XVIII</h1>
         <h2 class="chapter-title not-bold push-0 peta">The Poulps</h2>
       </hgroup>
-      <nav>
+      <nav role="navigation">
         <ul class="list-group-inline text-center push-0 pin-rc gutter-1-2">
           <li>
             <a class="btn chapter-btn" href="chapter-xvii.html">
@@ -112,7 +112,7 @@
       <p>“I owed myself this revenge!” said the Captain to the Canadian.</p>
       <p>Ned bowed without replying. The combat had lasted a quarter of an hour. The monsters, vanquished and mutilated, left us at last, and disappeared under the waves. Captain Nemo, covered with blood, nearly exhausted, gazed upon the sea that had swallowed up one of his companions, and great tears gathered in his eyes.</p>
     </div>
-    <footer class="chapter-ends chapter-copyright text-center pad-t-1-2 pad-b-1-2 gutter">
+    <footer class="chapter-ends chapter-copyright text-center pad-t-1-2 pad-b-1-2 gutter" role="contentinfo">
       <nav>
         <ul class="list-group-inline text-center push-0">
           <li>
