--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1 class="chapter-number not-bold push-0 italic kilo">Chapter XVIII</h1>
         <h2 class="chapter-title not-bold push-0 peta">The Poulps</h2>
       </hgroup>
-      <nav role="navigation">
+      <nav role="navigation" class="no-print">
         <ul class="list-group-inline text-center push-0 pin-rc gutter-1-2">
           <li>
             <a class="btn chapter-btn" href="chapter-xvii.html" aria-label="Go back">
@@ -113,7 +113,7 @@
       <p>Ned bowed without replying. The combat had lasted a quarter of an hour. The monsters, vanquished and mutilated, left us at last, and disappeared under the waves. Captain Nemo, covered with blood, nearly exhausted, gazed upon the sea that had swallowed up one of his companions, and great tears gathered in his eyes.</p>
     </div>
     <footer class="chapter-ends chapter-copyright text-center pad-t-1-2 pad-b-1-2 gutter">
-      <nav>
+      <nav class="no-print">
         <ul class="list-group-inline text-center push-0">
           <li>
             <a class="btn chapter-btn" href="chapter-xvii.html" aria-label="Go back">
