--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
       <p>“I owed myself this revenge!” said the Captain to the Canadian.</p>
       <p>Ned bowed without replying. The combat had lasted a quarter of an hour. The monsters, vanquished and mutilated, left us at last, and disappeared under the waves. Captain Nemo, covered with blood, nearly exhausted, gazed upon the sea that had swallowed up one of his companions, and great tears gathered in his eyes.</p>
     </div>
-    <footer class="chapter-ends chapter-copyright text-center pad-t-1-2 pad-b-1-2 gutter">
-      <nav class="no-print">
+    <footer class="chapter-ends chapter-copyright text-center pad-t-1-2 pad-b-1-2 gutter no-print">
+      <nav>
         <ul class="list-group-inline text-center push-0">
           <li>
             <a class="btn chapter-btn" href="chapter-xvii.html" aria-label="Go back">
@@ -135,7 +135,7 @@
     </footer>
   </article>
 
-  <footer class="book-ends text-center max-length gutter pad-t-1-2 pad-b-1-2" role="contentinfo">
+  <footer class="book-ends text-center max-length gutter pad-t-1-2 pad-b-1-2 no-print" role="contentinfo">
     <small class="micro">Twenty Thousand Leagues Under the Sea © Jules Verne, 1870.</small>
   </footer>
 
